--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@module-federation/vite": "^0.2.6",
+    "@originjs/vite-plugin-federation": "^1.2.3",
+    "@softarc/native-federation": "^1.1.1",
+    "@softarc/native-federation-esbuild": "^1.1.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
