Fix some strange log display

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "test": "vitest",
     "test:ci": "vitest run --coverage",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -16,7 +16,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@module-federation/vite": "^0.2.6",
     "@originjs/vite-plugin-federation": "^1.2.3",
     "@softarc/native-federation": "^1.1.1",
     "@softarc/native-federation-esbuild": "^1.1.1",
