--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.2.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-istanbul": "^0.32.2",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jsdom": "^22.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react-router-dom": "^6.13.0",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.2"
   }
 }
