Set port to 5000

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5000 --strictPort",
     "build": "vite build",
     "test": "vitest",
     "test:ci": "vitest run --coverage",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5000 --strictPort"
   },
   "dependencies": {
     "react": "^18.2.0",
