--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5000 --strictPort",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "test": "vitest",
     "test:ci": "vitest run --coverage",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
