Test remote router

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 5000 --strictPort"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.2.3",
@@ -32,7 +33,6 @@
     "jsdom": "^22.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "react-router-dom": "^6.13.0",
     "sort-by": "^0.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
