--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
@@ -35,7 +36,6 @@
     "jsdom": "^22.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "react-router-dom": "^6.13.0",
     "sort-by": "^0.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
