--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "external_modules/profiler/typings/types.d.ts"],
+  "include": [
+    "src",
+    "external_modules/profiler/typings/types.d.ts",
+    "external_modules/chart/typings/types.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
