Add material icon

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview --port 5000 --strictPort"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0"
